--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ pygobject = {version="^3.48.2", optional=true} # Only for Linux
 ttkthemes = "^3.2.2"
 
 # Git-Dependencies
-biotrainer = { git = "https://github.com/biocentral/biotrainer.git", branch = "maintenance/troubleshooting"}
+biotrainer = { git = "https://github.com/sacdallago/biotrainer.git", branch = "develop"}
 hvi_toolkit = { git = "https://github.com/SebieF/hvi_toolkit.git", branch = "main"}
 
 [tool.poetry.group.dev.dependencies]
