Fixing pyinstaller usage
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,11 +37,8 @@ jobs:
         poetry install
         pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
 
-    - name: Install pyinstaller
-      run: pip install pyinstaller
-
     - name: Build with pyinstaller
-      run: pyinstaller biocentral_server.spec
+      run: poetry run pyinstaller biocentral_server.spec
 
     - name: Zip build artifacts
       run: |
