--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,6 +35,9 @@ jobs:
         poetry install
         pip3 install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
 
+    - name: Run python tests
+      run: poetry run pytest
+
     - name: Build with pyinstaller
       run: poetry run pyinstaller biocentral_server.spec
 
