--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,10 @@
 name: Release
 
 on:
-  push:
-    branches:
-      - main
   workflow_run:
-    workflows: [ Build ]
-    types: [ completed ]
+    workflows: [Build]
+    types: [completed]
+    branches: [main]
 
 jobs:
   create_release:
@@ -14,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Get version
         id: get_version
@@ -32,7 +30,7 @@ jobs:
           prerelease: false
 
       - name: Download all artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
 
       - name: Upload Ubuntu Release Asset
         uses: actions/upload-release-asset@v1
