--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,7 +42,7 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./biocentral_server_ubuntu/biocentral_server_ubuntu.zip
           asset_name: biocentral_server_ubuntu-${{ steps.get_version.outputs.version }}.zip
-          asset_content_type: application/octet-stream
+          asset_content_type: application/zip
 
       - name: Upload Windows Release Asset
         uses: actions/upload-release-asset@v1
@@ -52,4 +52,4 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./biocentral_server_windows/biocentral_server_windows.zip
           asset_name: biocentral_server_windows-${{ steps.get_version.outputs.version }}.zip
-          asset_content_type: application/octet-stream
+          asset_content_type: application/zip
