--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ ttkthemes = "^3.2.2"
 # Git-Dependencies
 autoeval = {git = "https://github.com/J-SNACKKB/autoeval.git", branch = "update-biotrainer"}
 biotrainer = { git = "https://github.com/sacdallago/biotrainer.git", branch = "develop"}
+protspace = { git = "https://github.com/tsenoner/protspace.git", branch = "main"}
 hvi_toolkit = { git = "https://github.com/SebieF/hvi_toolkit.git", branch = "main"}
 
 [tool.poetry.group.dev.dependencies]
