--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ python = ">=3.11.9, <3.12"
 
 # Backend
 Flask = "^3.0.2"
-umap-learn="^0.5.7"
 levenshtein = "^0.26.1"
 taxoniq = "^1.0.1"
 appdirs = "^1.4.4"
@@ -25,7 +24,7 @@ pygobject = {version="^3.48.2", optional=true} # Only for Linux
 ttkthemes = "^3.2.2"
 
 # Git-Dependencies
-autoeval = {git = "https://github.com/J-SNACKKB/autoeval.git", branch = "update-biotrainer"}
+autoeval = {git = "https://github.com/J-SNACKKB/autoeval.git", branch = "master"}
 biotrainer = { git = "https://github.com/sacdallago/biotrainer.git", branch = "develop"}
 protspace = { git = "https://github.com/tsenoner/protspace.git", branch = "main"}
 hvi_toolkit = { git = "https://github.com/SebieF/hvi_toolkit.git", branch = "main"}
