--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
 
   biocentral-worker:
     build: .
-    command: rq worker --url redis://redis-jobs:6379/0 high default low
+    command: rq worker-pool --url redis://redis-jobs:6379/0 high default low --n 9
     environment:
       - POSTGRES_HOST=embeddings-db
       - POSTGRES_DB=${POSTGRES_DB}
@@ -48,24 +48,6 @@ services:
     networks:
       - biocentral-network
 
-  embeddings-db:
-    image: postgres:15
-    environment:
-      - POSTGRES_DB=${POSTGRES_DB}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-    volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./init-db.sql:/docker-entrypoint-initdb.d/init-db.sql:ro
-    ports:
-      - "${POSTGRES_PORT}:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-    networks:
-      - biocentral-network
   redis-jobs:
     image: redis:alpine
     ports:
@@ -78,13 +60,74 @@ services:
     networks:
       - biocentral-network
 
+  embeddings-db:
+    image: postgres:15
+    environment:
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "${POSTGRES_PORT}:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
+    networks:
+      - biocentral-network
+
+  seaweedfs-master:
+    image: chrislusf/seaweedfs
+    ports:
+      - "9333:9333"
+    command: "master -ip=seaweedfs-master"
+    networks:
+      - biocentral-network
+
+  seaweedfs-volume:
+    image: chrislusf/seaweedfs
+    ports:
+      - "8080:8080"
+    command: 'volume -dir="/data" -max=5 -mserver="seaweedfs-master:9333"'
+    volumes:
+      - seaweedfs_data:/data
+    depends_on:
+      - seaweedfs-master
+    networks:
+      - biocentral-network
+
+  seaweedfs-filer:
+    image: chrislusf/seaweedfs
+    ports:
+      - "8888:8888"
+    command: 'filer -master="seaweedfs-master:9333"'
+    depends_on:
+      - seaweedfs-master
+    networks:
+      - biocentral-network
+
+
 volumes:
   postgres_data:
     driver: local
     driver_opts:
       type: none
       o: bind
-      device: ${POSTGRES_DATA_PATH}
+      device: ${EMBEDDINGS_DATA_DIR}
+  seaweedfs_data:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${FILES_DATA_DIR}
+  temp_server_storage:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: ${SERVER_TEMP_DATA_DIR}
 
 networks:
   biocentral-network:
