--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "biocentral-server"
 version = "0.1.2"
-description = "Server for the biocentral application"
+description = "Compute server for the biocentral frontend"
 authors = ["Sebastian Franz <sebastian.franz@tum.de>"]
 license = "GPLv3"
 readme = "README.md"
@@ -13,15 +13,12 @@ python = ">=3.11.9, <3.12"
 Flask = "^3.0.2"
 levenshtein = "^0.26.1"
 taxoniq = "^1.0.1"
-appdirs = "^1.4.4"
 blosc2 = "^2.7.1"
 tinydb = "^4.8.2"
 psycopg = "^3.2.3"
-
-# Frontend
-pystray="^0.19.5"
-pygobject = {version="^3.48.2", optional=true} # Only for Linux
-ttkthemes = "^3.2.2"
+gunicorn = "^23.0.0"
+rq = "^2.1.0"
+python-dotenv = "^1.0.1"
 
 # Git-Dependencies
 autoeval = {git = "https://github.com/J-SNACKKB/autoeval.git", branch = "master"}
@@ -29,13 +26,10 @@ biotrainer = { git = "https://github.com/sacdallago/biotrainer.git", branch = "d
 protspace = { git = "https://github.com/tsenoner/protspace.git", branch = "main"}
 hvi_toolkit = { git = "https://github.com/SebieF/hvi_toolkit.git", branch = "main"}
 
+
 [tool.poetry.group.dev.dependencies]
 pytest = "8.3.1"
-pyinstaller = "^6.9.0"
 pip-audit = "^2.7.3"
-
-[tool.poetry.extras]
-linux = ["pygobject"]
 
 [build-system]
 requires = ["poetry-core"]
