--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
 # EMBEDDINGS DB
+USE_POSTGRES=True
+POSTGRES_HOST=embeddings-db
+POSTGRES_PORT=5432
 POSTGRES_DB=embeddings_db
 POSTGRES_USER=embeddingsuser
 POSTGRES_PASSWORD=embeddingspwd
-POSTGRES_PORT=5432
 
 # JOBS
 REDIS_JOBS_HOST=redis-jobs
