--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,10 @@
 # EMBEDDINGS DB
+USE_POSTGRES=True
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 POSTGRES_DB=embeddings_db
 POSTGRES_USER=embeddingsuser
 POSTGRES_PASSWORD=embeddingspwd
-POSTGRES_PORT=5432
 
 # JOBS
 REDIS_JOBS_HOST=localhost
