--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
 
   biocentral-worker:
     build: .
-    command: rq worker-pool --url redis://redis-jobs:6379/0 high default low --n 9
+    command: rq worker-pool --url redis://redis-jobs:6379/0 high default low -n 3
     environment:
       - POSTGRES_HOST=embeddings-db
       - POSTGRES_DB=${POSTGRES_DB}
