--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,6 @@ SEAWEEDFS_FILER_HOST=seaweedfs-filer
 SEAWEEDFS_FILER_PORT=8888
 
 # DIRECTORIES
-EMBEDDINGS_DATA_DIR=/storage/embeddings
-FILES_DATA_DIR=/storage/files
-SERVER_TEMP_DATA_DIR=/storage/server_temp_files
+EMBEDDINGS_DATA_DIR=./storage/embeddings
+FILES_DATA_DIR=./storage/files
+SERVER_TEMP_DATA_DIR=./storage/server_temp_files
