Fixing docker compose setup with huggingface models cache
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,4 @@ SEAWEEDFS_FILER_PORT=8888
 EMBEDDINGS_DATA_DIR=./storage/embeddings
 FILES_DATA_DIR=./storage/files
 SERVER_TEMP_DATA_DIR=./storage/server_temp_files
+HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
