--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,10 +21,9 @@ python-dotenv = "^1.0.1"
 
 # Git-Dependencies
 autoeval = {git = "https://github.com/J-SNACKKB/autoeval.git", branch = "master"}
-biotrainer = { git = "https://github.com/sacdallago/biotrainer.git", branch = "develop"}
+biotrainer = { git = "https://github.com/sacdallago/biotrainer.git", extras = ["onnx-gpu"], branch = "develop"} # Change to onnx-mac on MacOS
 protspace = { git = "https://github.com/tsenoner/protspace.git", branch = "main"}
 hvi_toolkit = { git = "https://github.com/SebieF/hvi_toolkit.git", branch = "main"}
-
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.3.1"
