Using machine with larger disk for image building
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-and-push:
     name: Build and Push Docker Image
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-large-disk
     permissions:
       contents: read
       packages: write  # Needed for GitHub Container Registry
