--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -60,6 +60,7 @@ services:
     command: 'filer -master="seaweedfs-master:9333"'
     depends_on:
       - seaweedfs-master
+      - seaweedfs-volume
     networks:
       - seaweedfs-network
     healthcheck:
@@ -67,6 +68,7 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
+      start_period: 30s
 
 volumes:
   postgres_data:
