--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -64,11 +64,11 @@ services:
     networks:
       - seaweedfs-network
     healthcheck:
-      test: [ "CMD", "wget", "--spider", "--quiet", "http://seaweedfs-filer:8888/" ]
+      test: [ "CMD", "wget", "--spider", "--quiet", "-Y", "off", "http://seaweedfs-filer:8888/" ]
       interval: 5s
       timeout: 5s
       retries: 10
-      start_period: 30s
+      start_period: 20s
 
 volumes:
   postgres_data:
