Improving ports for seaweedfs in docker compose dev
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -35,17 +35,13 @@ services:
 
   seaweedfs-master:
     image: chrislusf/seaweedfs
-    ports:
-      - "9333:9333"
-    command: "master -ip=seaweedfs-master"
+    command: "master -ip=seaweedfs-master -port=9333 -port.grpc=19333"
     networks:
       - seaweedfs-network
 
   seaweedfs-volume:
     image: chrislusf/seaweedfs
-    ports:
-      - "8080:8080"
-    command: 'volume -dir="/data" -max=5 -mserver="seaweedfs-master:9333"'
+    command: 'volume -mserver="seaweedfs-master:9333" -port=8080 -port.grpc=18080 -ip=seaweedfs-volume'
     volumes:
       - seaweedfs_data:/data
     depends_on:
@@ -57,7 +53,7 @@ services:
     image: chrislusf/seaweedfs
     ports:
       - "${SEAWEEDFS_FILER_PORT}:8888"
-    command: 'filer -master="seaweedfs-master:9333"'
+    command: 'filer -master="seaweedfs-master:9333" -port=8888 -port.grpc=18888 -ip=seaweedfs-filer'
     depends_on:
       - seaweedfs-master
       - seaweedfs-volume
