Fixing local environment variables setup
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.env.local
+++ b/.env.local
@@ -14,7 +14,7 @@ SEAWEEDFS_FILER_HOST=localhost
 SEAWEEDFS_FILER_PORT=8888
 
 # DIRECTORIES
-EMBEDDINGS_DATA_DIR=/storage/embeddings
-FILES_DATA_DIR=/storage/files
-SERVER_TEMP_DATA_DIR=/storage/server_temp_files
+EMBEDDINGS_DATA_DIR=./storage/embeddings/postgres
+FILES_DATA_DIR=./storage/files
+SERVER_TEMP_DATA_DIR=./storage/server_temp_files
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
