--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,8 @@ autoeval = {git = "https://github.com/J-SNACKKB/autoeval.git", branch = "master"
 biotrainer = { git = "https://github.com/sacdallago/biotrainer.git", extras = ["onnx-gpu"], branch = "develop"} # Change to onnx-mac on MacOS
 protspace = { git = "https://github.com/tsenoner/protspace.git", branch = "main"}
 hvi_toolkit = { git = "https://github.com/SebieF/hvi_toolkit.git", branch = "main"}
+vespag = { git = "https://github.com/biocentral/VespaG.git", branch = "onnx-deployment"}
+tmbed = { git = "https://github.com/biocentral/TMbed.git", branch = "onnx-deployment"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "8.3.1"
