--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ psycopg = "^3.2.3"
 gunicorn = "^23.0.0"
 rq = "^2.1.0"
 python-dotenv = "^1.0.1"
+gpytorch = "^1.14"
 
 # Git-Dependencies
 autoeval = {git = "https://github.com/J-SNACKKB/autoeval.git", branch = "master"}
