--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,10 @@ gpytorch = "^1.14"
 
 # Git-Dependencies
 autoeval = {git = "https://github.com/J-SNACKKB/autoeval.git", branch = "master"}
-biotrainer = { git = "https://github.com/sacdallago/biotrainer.git", extras = ["onnx-gpu"], branch = "develop"} # Change to onnx-mac on MacOS
+#biotrainer = { git = "https://github.com/sacdallago/biotrainer.git", extras = ["onnx-gpu"], branch = "develop"} # Change to onnx-mac on MacOS
+biotrainer = { git = "https://github.com/biocentral/biotrainer.git", extras = ["onnx-gpu"], branch = "breaking/v-1-0-0"} # Change to onnx-mac on MacOS
 protspace = { git = "https://github.com/tsenoner/protspace.git", branch = "main"}
-hvi_toolkit = { git = "https://github.com/SebieF/hvi_toolkit.git", branch = "main"}
+hvi_toolkit = { git = "https://github.com/SebieF/hvi_toolkit.git", branch = "maintenance/update-biotrainer"}
 vespag = { git = "https://github.com/biocentral/VespaG.git", branch = "onnx-deployment"}
 tmbed = { git = "https://github.com/biocentral/TMbed.git", branch = "onnx-deployment"}
 
