Adding AUTOEVAL_DATA_DIR variable for autoeval custom_storage_path
Signed-off-by: Sebastian <sebastian.franz@tum.de>

--- a/.env.local
+++ b/.env.local
@@ -18,3 +18,4 @@ EMBEDDINGS_DATA_DIR=./storage/embeddings/postgres
 FILES_DATA_DIR=./storage/files
 SERVER_TEMP_DATA_DIR=./storage/server_temp_files
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
+AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
