feat: add basic triton client
Signed-off-by: Tobias O <tobias.olenyi@tum.de>

--- a/.env.local
+++ b/.env.local
@@ -13,9 +13,21 @@ REDIS_JOBS_PORT=6379
 SEAWEEDFS_FILER_HOST=localhost
 SEAWEEDFS_FILER_PORT=8888
 
+# TRITON INFERENCE SERVER
+TRITON_GRPC_URL=http://localhost:8001
+TRITON_HTTP_URL=http://localhost:8000
+TRITON_POOL_SIZE=4
+TRITON_TIMEOUT=30
+TRITON_CONNECTION_TIMEOUT=10
+TRITON_CIRCUIT_BREAKER_THRESHOLD=5
+TRITON_CIRCUIT_BREAKER_TIMEOUT=60
+TRITON_MAX_BATCH_SIZE=32
+USE_TRITON=false
+
 # DIRECTORIES
 EMBEDDINGS_DATA_DIR=./storage/embeddings/postgres
 FILES_DATA_DIR=./storage/files
 SERVER_TEMP_DATA_DIR=./storage/server_temp_files
 HUGGINGFACE_MODELS_DIR=~/.cache/huggingface
 AUTOEVAL_DATA_DIR=~/.cache/biotrainer/autoeval
+MODEL_REPOSITORY_PATH=./storage/model-repository
