--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ dependencies = [
     "python-dotenv>=1.0.1,<2.0.0",
     "gpytorch>=1.14,<2.0",
     "onnxruntime-gpu>=1.16.0,<2.0.0",  # Replace with onnxruntime for cpu / onnxruntime-coreml for Darwin
+    "tritonclient[grpc]>=2.50.0",
+    "circuitbreaker>=2.0.0",
 
     # Git Dependencies
     "biotrainer @ git+https://github.com/sacdallago/biotrainer.git@main",
